# celtui

./: .gitignore  CALCULATION_DEBUG.md  Cargo.toml  FIXES_SUMMARY.md  README.md  STAR_SIGHT_CORRECT_FIX.md  STAR_SIGHT_FIX_SUMMARY.md  release.sh
.github/workflows/: release.yml
celtnav/: Cargo.toml
celtnav/examples/: dms_example.rs
celtnav/src/: almanac.rs  coords.rs  dms.rs  fix_calculation.rs  lib.rs  sight_averaging.rs  sight_reduction.rs  time_conversion.rs  twilight.rs
celtnav/src/coords/: coords_test_data.rs
celtnav/tests/: coords_tests.rs  debug_azimuth_calculation.rs  dms_conversion_tests.rs  fix_calculation_tests.rs  pollux_debugging.rs  pollux_user_example_test.rs  sight_averaging_tests.rs  sight_reduction_tests.rs  star_optimization_tests.rs  test_aldebaran_1975.rs  test_moon_planet_sights.rs  test_moon_planets_2024.rs  test_move_position.rs  test_proper_motion_correction.rs  three_star_fix_2015_almanac.rs  three_star_fix_correct_azimuth.rs  three_star_fix_user_values.rs  three_star_fix_with_ap.rs  time_conversion_tests.rs  user_three_star_fix_test.rs  verify_computed_azimuths_2015.rs  verify_fix_geometry.rs  verify_hamal_calculation.rs  year_search_test.rs
celtui/: Cargo.toml
celtui/src/: almanac_screen.rs  app.rs  arc_to_time_screen.rs  auto_compute_screen.rs  averaging_screen.rs  calculation_screen.rs  dr_ep_screen.rs  export.rs  main.rs  persistence.rs  sight_reduction_screen.rs  twilight_screen.rs  ui.rs  validation.rs
